--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,1 +1,8 @@
 <p>test works!</p>
+
+<h1>hello {{ name }}</h1>
+<h2>{{ 5 + 5 }}</h2>
+<h3>{{ name.length }}</h3>
+<h4>{{ name.toUpperCase() }}</h4>
+<h5>{{ greetingUser() }}</h5>
+<h1>{{ url }}</h1>
