--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,8 +1,7 @@
 <p>test works!</p>
 
-<h1>hello {{ name }}</h1>
-<h2>{{ 5 + 5 }}</h2>
-<h3>{{ name.length }}</h3>
-<h4>{{ name.toUpperCase() }}</h4>
-<h5>{{ greetingUser() }}</h5>
-<h1>{{ url }}</h1>
+<input [id]="myId" type="text" value="Ahmed" />
+<input id="{{ myId }}" type="text" value="Ahmed" />
+<br />
+<input [disabled]="isDisabled" type="text" value="Ahmed" />
+<input bind-disabled="isDisabled" type="text" value="Ahmed" />
