--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,4 +1,3 @@
-<h1 [style.color]="'red'">Style binding</h1>
-<h1 [style.color]="hasError ? 'red' : 'green'">Style binding</h1>
-<h1 [style.color]="highlightColor">Style binding</h1>
-<h1 [ngStyle]="titleStyle">Style binding</h1>
+<button (click)="onClick($event)">click Me</button>
+<h1 [style.color]="'green'">{{ greeting }}</h1>
+<button (click)="greeting = 'Welcome Ahmed'">click</button>
