--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,2 +1,14 @@
-<input type="text" [(ngModel)]="name" />
-<h2>{{ name }}</h2>
+<!-- <h1 *ngIf="true">Ahmed</h1> -->
+<!-- <h1 *ngIf="displayName; else elseRef">True</h1>
+<ng-template #elseRef>
+  <h2>false</h2>
+</ng-template> -->
+
+<div *ngIf="displayName; then thenRef; else elseRef"></div>
+
+<ng-template #thenRef>
+  <h2>Then block</h2>
+</ng-template>
+<ng-template #elseRef>
+  <h2>Else block</h2>
+</ng-template>
